src/styles.css
:root {
  --heading-font-family: "Space Mono", monospace;
  --default-font-family: "Spectral", serif;
  --heading-color: #000;
  --default-color: #000;
  --branding-color: #faa28c;
  --secondary-color: #c847d0;
  --tertiary-color: #c7f4f1;
  --fourth-color: #cc99fe;
}

body {
  background-color: #f1eff1;
}

h1 {
  color: var(--heading-color);
  font-family: var(--heading-font-family);
  font-weight: normal;
  font-size: 45px;
  margin: 130px 50px 30px 50px;
}

h2 {
  color: var(--heading-color);
  font-size: 40px;
  font-family: var(--heading-font-family);
  font-weight: bold;
}

p {
  font-family: var(--default-font-family);
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}

a {
  color: var(--default-color);
}

.hero {
  padding-bottom: 100px;
  margin: 0;
}

.view-work {
  padding-top: 90px;
  font-family: var(--heading-font-family);
  color: var(--default-color);
  font-size: 24px;
  background: linear-gradient(120deg, #c847d0 0%, #c847d0 100%);
  background-repeat: no-repeat;
  background-size: 23% 3%;
  background-position: 545px 77%;
}

.highlight-1 {
  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
  background-repeat: no-repeat;
  background-size: 32% 10%;
  background-position: 0 77%;
}

.highlight-2 {
  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
  background-repeat: no-repeat;
  background-size: 32% 10%;
  background-position: 0 77%;
}

.section-title {
  font-size: 40px;
  font-weight: bold;
  font-family: var(--heading-font-family);
  padding: 125px 20px 50px 20px;
}

.primary-button {
  background: var(--tertiary-color);
  border: 4px solid var(--branding-color);
  border-radius: 4px;
  color: var(--default-color);
  font-family: var(--heading-font-family);
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
  text-decoration: none;
  margin-right: 15px;
}

.primary-button:hover {
  color: var(--default-color);
  background: var(--branding-color);
  border: 4px solid var(--tertiary-color);
}

.secondary-button {
  background: var(--fourth-color);
  border: 4px solid var(--secondary-color);
  border-radius: 4px;
  color: var(--default-color);
  font-family: var(--heading-font-family);
  font-size: 20px;
  line-height: 27px;
  padding: 15px 30px;
  text-decoration: none;
}

.secondary-button:hover {
  color: var(--default-color);
  background: var(--secondary-color);
  border: 4px solid var(--fourth-color);
}

.project-description {
  padding: 120px 40px 120px 50px;
}

.project-image {
  border-radius: 7px;
}

.adobe {
  font-weight: bold;
  font-style: italic;
}

/*About Page*/

.about-section-hero h1 {
  margin-bottom: 50px;
  font-size: 40px;
}

.about-section-hero p {
  padding-left: 57px;
}

.profile-pic {
  border-radius: 4px;
  height: 320px;
  margin: 230px 0 0 188px;
}

.view-resume {
  font-family: var(--heading-font-family);
  color: var(--default-color);
  text-decoration: underline;
  text-decoration-color: var(--secondary-color);
  font-size: 18px;
  margin-left: 56px;
  font-weight: bold;
}

.view-resume:hover {
  color: var(--secondary-color);
}

.skills-section {
  margin: 180px;
}

.skills-header {
  margin-bottom: 55px;
  font-weight: normal;
  background: linear-gradient(120deg, #faa28c 0%, #faa28c 100%);
  background-repeat: no-repeat;
  background-size: 57% 37%;
  background-position: 201px 107%;
}

.row-skills {
  font-size: 60px;
  color: var(--default-color);
}

/* Media Queries*/

@media (max-width: 900px) {
  h1 {
    font-size: 28px;
    padding-top: 0;
    line-height: 1.5;
    margin-top: 75px;
  }

  h2 {
    font-size: 25px;
    text-align: center;
  }

  .view-work {
    font-size: 18px;
    padding: 30px;
    text-align: center;
  }

  .section-title {
    font-size: 25px;
    padding-top: 30px;
    text-align: center;
  }

  .project-description {
    padding: 0;
    text-align: center;
  }

  .primary-button {
    font-size: 18px;
  }

  .secondary-button {
    font-size: 18px;
  }

  .btn-group {
    margin: 3px 3px;
  }

  .about-section-hero {
    text-align: center;
  }

  .about-section-hero h1 {
    margin: 45px;
    font-size: 30px;
  }

  .about-section-hero p {
    padding: 10px;
  }

  a.view-resume {
    margin: 0 auto;
  }

  .profile-pic {
    max-width: 100%;
    height: 180px;
    padding-bottom: 20px;
    margin: 15px 0px 0px 0px;
  }

  .skills-section {
    margin-top: 50px;
    text-align: center;
  }
}

